--- a/config.json
+++ b/config.json
@@ -1,19 +1,12 @@
 {
-	"nodes": [{
+	"queen_room": [{
 		"id": "room1",
-		"type": "queenroom",
 		"host": "127.0.0.1",
-		"port": 4444
+		"port": 4444,
+		"subscribe": true
 	}, {
-		"id": "room2",
-		"type": "queenroom",
+		"id1": "room2",
 		"host": "127.0.0.1",
 		"port": 4445
-	}, {
-		"id": "business",
-		"type": "socketio",
-		"host": "127.0.0.1",
-		"port": 4445
-	}
-]
+	}]
 }
