--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "net": "^1.0.2",
     "socket.io": "^2.3.0",
+    "uuidv4": "^5.0.1",
     "xml-parser": "^1.2.1"
   }
 }
