--- a/config.json
+++ b/config.json
@@ -2,14 +2,20 @@
 	"settings": {
 		"queueSizeLimit": 1024
 	},
-	"queen_room": [{
-		"id": "room1",
-		"host": "127.0.0.1",
-		"port": 4444,
-		"subscribe": true
-	}, {
-		"id": "room2",
-		"host": "127.0.0.1",
-		"port": 4445
+	"abonqueen": [
+		{
+			"id": "room1",
+			"host": "127.0.0.1",
+			"port": 4444,
+			"autopublish": ["room1_events"]
+		}, {
+			"id": "room2",
+			"host": "127.0.0.1",
+			"port": 4445
+		}
+	],
+	"topics": [{
+		"id": "room1_events",
+		"subscribers": ["siotest-262"]
 	}]
 }
