--- a/config.json
+++ b/config.json
@@ -7,7 +7,9 @@
 			"id": "room1",
 			"host": "127.0.0.1",
 			"port": 4444,
-			"autopublish": ["room1_events"]
+			"autopublish": {
+				"all": ["room1_events"]
+			}
 		}, {
 			"id": "room2",
 			"host": "127.0.0.1",
@@ -16,6 +18,6 @@
 	],
 	"topics": [{
 		"id": "room1_events",
-		"subscribers": ["siotest-262"]
+		"subscribers": ["siotest-557"]
 	}]
 }
