--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "amqplib": "^0.5.5",
     "axios": "^0.19.0",
     "cors": "^2.8.5",
+    "ejs": "^2.7.1",
     "express": "^4.17.1",
     "net": "^1.0.2",
     "socket.io": "^2.3.0",
